--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Asteroids Game!</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Asteroids Game!</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Instructions Manual<br>
+			Press W or S to go forward or backward<br>
+			Press A or D to rotate left or right<br>
+			Press H to go to hyperspace
 	    </footer>
 	</body>
 </html>
