--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 			<h1>Asteroids Game!</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde Asteroid.pde">
+				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde Asteroid.pde Bullet.pde">
 				</canvas>
 		    </section>
 	    <footer>
 		    Instructions Manual<br>
 			Press W or S to go forward or backward<br>
 			Press A or D to rotate left or right<br>
-			Press H to go to hyperspace
+			Press H to go to hyperspace<br>
+			Press Space to shoot bullets
 	    </footer>
 	</body>
 </html>
